--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>My First Page</title>
+	<title>Jilna George</title>
 </head>
 <body>
-	<p>This is My Paragraph</p>
-	<footer>
-		<p> Think of an interesting footer !</p>
-	</footer>
+	<h1>Jilna George</h1>
+	<footer></footer>
 </body>
-
 </html>
